# OSIP

./: .gitignore  README.md
AlazarTechLibrary/: AlazarTechLibrary.pro  alazartechdaqstage.cpp  alazartechdaqstage.h
AlazarTechTest/: AlazarTechTest.pro  main.cpp
DAQ/: DAQ.pro  daq.cpp  daq.h
DAQPipelineStages/: DAQPipelineStages.pro  alazartechdaqstage.cpp  daqpipelinestages_global.h  loaddata.cpp  loaddata.h  loaddata_impl.h  loadoctpipeline.cpp  loadoctpipeline.h  loadoctpipeline_impl.h  nodaqstage.cpp  nodaqstage.h
DisplayPipelineStage/: DisplayPipelineStage.pro  displaypipelinestage.cpp  displaypipelinestage.h  displaypipelinestage_global.h  displaypipelinestage_impl.h
HDF5/1.10.1/include/: H5pubconf.h
HDF5/1.10.1/lib/: libhdf5.1.10.1.dylib  libhdf5.100.1.0.dylib  libhdf5.dylib  libhdf5_cpp.1.10.1.dylib  libhdf5_cpp.100.1.0.dylib  libhdf5_cpp.dylib  libhdf5_hl.1.10.1.dylib  libhdf5_hl.100.1.0.dylib  libhdf5_hl.dylib  libhdf5_hl_cpp.1.10.1.dylib  libhdf5_hl_cpp.100.1.0.dylib  libhdf5_hl_cpp.dylib  libhdf5_tools.1.10.1.dylib  libhdf5_tools.100.1.0.dylib  libhdf5_tools.dylib
OCTLibrary/: CMakeLists.txt  OCTLibrary.pro  alazartechdaqstage.h  ascanbackend.cpp  ascanbackend.h  bscanimageprovider.cpp  bscanimageprovider.h  enfaceimageprovider.cpp  enfaceimageprovider.h  loadoctpipeline.cpp  loadoctpipeline.h  loadoctpipeline.hpp  loadoctpipeline_impl.h  main.cpp  nodaqstage.cpp  nodaqstage.h  octconfigfile.cpp  octconfigfile.h  octdisplaystage.cpp  octdisplaystage.h  octlibrary.cpp  octlibrary.h  octlibrary_global.h  octpipeline.cpp  octpipeline.h  octpipelinestage.cpp  octpipelinestage.h  octpipelinestage_cpu.cpp  octpipelinestage_cpu.h  websocketserver.cpp  websocketserver.h  windowmaker.h
OCT_3D/: OCT_3D.pro  main.qml
OCT_DAQConfig/: OCT_DAQConfig.pro  main.cpp
OCT_GUI/: BScan.js  OCTBackend.cpp  OCTBackend.h  OCT_GUI.pro  QML_DAQConfig.qml  QML_GalvoConfig.qml  QML_ViewAscan.qml  Support.js  bscan_fshader.glsl  bscan_vshader.glsl  bscangl.cpp  bscangl.h  bscanimageprovider.cpp  bscanimageprovider.h  bscanqml.cpp  bscanqml.h  bscanrendergl.cpp  bscanrendergl.h  main.cpp  main.qml  mainbackend.h  menubackend.cpp  menubackend.h  octdisplaystage.cpp  octdisplaystage.h  octpipeline.cpp  octpipeline.h  qml.qrc  qmldaqconfigbackend.cpp  qmldaqconfigbackend.h  qmlgalvobackend.cpp  qmlgalvobackend.h  qmlvolumerender.h
OCT_GUI_APP/: OCT_GUI_APP.pro  bscanglwidget.cpp  bscanglwidget.h  octconfigfile.cpp  octdisplaystage.cpp  octdisplaystage.h  octpipeline.cpp
OSIP_Frontend/: app.js  package-lock.json
OSIP_Frontend/public/: index.html  oct_gui.css  oct_gui.js
Peripheral/: Peripheral.pro  galvos.cpp  galvos.h  insitelaser.cpp  insitelaser.h  nidaqmx.cpp  nidaqmx.h  nidaqmxgalvos.cpp  nidaqmxgalvos.h  peripheral.cpp  peripheral.h  peripheral_global.h
Peripheral_Test/: Peripheral_Test.pro  main.cpp
Pipeline/: .gitignore  Pipeline.pro  PipelineStage.cpp  daqstage.cpp  daqstage.h  daqstage.hpp  daqstage_impl.h  displaypipelinestage.hpp  inlet.cpp  inlet.h  inlet.hpp  inlet_impl.h  openclpipeline.cpp  openclpipeline.h  openclpipeline.hpp  openclpipeline_impl.h  outlet.cpp  outlet.h  outlet_impl.h  payload.cpp  payload.h  payload.hpp  payload_impl.h  peripheral.h  peripheral.hpp  pipeline.h  pipeline.hpp  pipeline_global.h  pipelinestage.h  pipelinestage.hpp  pipelinestage_impl.h  savingstage.cpp  savingstage.h  savingstage.hpp  savingstage_impl.h
Pipeline/DAQ/: daqstagegenerated.hpp
Pipeline/DAQ/Alazar/: daqstagealazar.hpp  daqstagealazar660.hpp  daqstagealazar9350.hpp
Pipeline/Peripherals/: galvos.hpp  laser.hpp  peripheral.hpp
PipelineTest/: PipelineTest.pro  main.cpp
Pipeline_Test/: Pipeline_Test.pro  main.cpp  openclpipeline_test.h  saving_test.h  test.cl
ProcessingPipelineStages/: ProcessingPipelineStages.pro  octpipelinestage_cpu.cpp  octpipelinestage_cpu.h  processingpipelinestages_global.h
SignalProcessingPipelineStages/: SignalProcessingPipelineStages.pro  octpipelinestage_cpu.cpp  octpipelinestage_cpu.h  signalprocessingpipelinestages_global.h  windowmaker.cpp
dependancies/: .gitignore
dependancies/HDF5/1.10.1/lib/win10-vs17_x64/: hdf5.lib  hdf5_cpp.lib  hdf5_hl.lib  hdf5_hl_cpp.lib  hdf5_tools.lib  libhdf5_cpp.lib  libhdf5_hl.lib  libhdf5_hl_D.lib  libhdf5_hl_cpp.lib  libhdf5_hl_cpp_D.lib  libhdf5_tools.lib  libhdf5_tools_D.lib
dependancies/boost_1_65/lib/macOS-xcode_x64/: libboost_filesystem.dylib  libboost_system.dylib
dependancies/boost_1_65/lib/win-vs17_x64/: libboost_filesystem-vc141-mt-1_65_1.lib  libboost_system-vc141-mt-1_65_1.lib  libboost_system-vc141-mt-gd-1_65_1.lib
dependancies/fftw/lib/macOS-xcode_x64/: libfftw3f.3.dylib
dependancies/fftw/lib/win-vs17_x64/: libfftw3f-3.exp  libfftw3f-3.lib
dependancies/szip/lib/win-vs17_x64/: libszip.lib
dependancies/zlib/win-vs17_x64/: libzlib.lib
test_data/: .gitignore
